--- a/controllers/webhook-manifests.yaml
+++ b/controllers/webhook-manifests.yaml
@@ -1,73 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: mondoo-operator-webhook-service
-  namespace: mondoo-operator
-spec:
-  ports:
-  - port: 443
-    protocol: TCP
-    targetPort: 9443
-  selector:
-    control-plane: webhook-manager
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  labels:
-    control-plane: webhook-manager
-  name: mondoo-operator-webhook-manager
-  namespace: mondoo-operator
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      control-plane: webhook-manager
-  template:
-    metadata:
-      labels:
-        control-plane: webhook-manager
-    spec:
-      containers:
-      - command:
-        - /webhook
-        image: ghcr.io/mondoohq/mondoo-operator:v0.0.13
-        imagePullPolicy: Always
-        livenessProbe:
-          httpGet:
-            path: /healthz
-            port: 8081
-          initialDelaySeconds: 15
-          periodSeconds: 20
-        name: webhook
-        readinessProbe:
-          httpGet:
-            path: /readyz
-            port: 8081
-          initialDelaySeconds: 5
-          periodSeconds: 10
-        resources:
-          limits:
-            cpu: 200m
-            memory: 100Mi
-          requests:
-            cpu: 100m
-            memory: 20Mi
-        securityContext:
-          allowPrivilegeEscalation: false
-        volumeMounts:
-        - mountPath: /tmp/k8s-webhook-server/serving-certs
-          name: cert
-          readOnly: true
-      securityContext:
-        runAsNonRoot: true
-      terminationGracePeriodSeconds: 10
-      volumes:
-      - name: cert
-        secret:
-          defaultMode: 420
-          secretName: webhook-server-cert
----
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
@@ -78,8 +8,8 @@ webhooks:
   - v1
   clientConfig:
     service:
-      name: mondoo-operator-webhook-service
-      namespace: mondoo-operator
+      name: webhook-service
+      namespace: system
       path: /validate-k8s-mondoo-com-core
   failurePolicy: Ignore
   name: core-policy.k8s.mondoo.com
