--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -49,6 +49,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Import environment variables from file
         run: cat ".github/env" >> $GITHUB_ENV
+      - name: Setup Mondoo
+        uses: mondoohq/actions/setup@v0.6.0
+        with:
+          service-account-credentials: ${{ secrets.MONDOO_CLIENT }}
       - name: Scan AWS terraform with Mondoo
         uses: mondoohq/actions/terraform@main
         with:
