--- a/.github/workflows/cloud-tests.yaml
+++ b/.github/workflows/cloud-tests.yaml
@@ -35,181 +35,181 @@ env:
   MONDOO_CLIENT_IMAGE_TAG: ${{ github.event.inputs.mondooClientImageTag }}
 
 jobs:
-  # aks-integration-test:
-  #   runs-on: ubuntu-latest
-  #   name: AKS integration tests
+  aks-integration-test:
+    runs-on: ubuntu-latest
+    name: AKS integration tests
 
-  #   env:
-  #     ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-  #     ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-  #     ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-  #     ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-  #     KUBECONFIG: ${{ format('{0}/{1}', github.workspace, '.github/terraform/aks/kubeconfig') }}
+    env:
+      ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      KUBECONFIG: ${{ format('{0}/{1}', github.workspace, '.github/terraform/aks/kubeconfig') }}
     
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       k8s-version: ["1.22", "1.23", "1.24"]
+    strategy:
+      fail-fast: false
+      matrix:
+        k8s-version: ["1.22", "1.23", "1.24"]
 
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0 # fetch is needed for "git tag --list" in the Makefile
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # fetch is needed for "git tag --list" in the Makefile
 
-  #     - name: Import environment variables from file
-  #       run: cat ".github/env" >> $GITHUB_ENV
+      - name: Import environment variables from file
+        run: cat ".github/env" >> $GITHUB_ENV
 
-  #     - name: Setup Terraform
-  #       uses: hashicorp/setup-terraform@v1
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
 
-  #     - name: Terraform init
-  #       run: terraform init
-  #       working-directory: .github/terraform/aks
+      - name: Terraform init
+        run: terraform init
+        working-directory: .github/terraform/aks
       
-  #     - name: Terraform plan
-  #       run: terraform plan -out aks-${{ matrix.k8s-version }}.json
-  #       env:
-  #         TF_VAR_k8s_version: ${{ matrix.k8s-version }}
-  #       working-directory: .github/terraform/aks
+      - name: Terraform plan
+        run: terraform plan -out aks-${{ matrix.k8s-version }}.json
+        env:
+          TF_VAR_k8s_version: ${{ matrix.k8s-version }}
+        working-directory: .github/terraform/aks
 
-  #     - name: Terraform apply
-  #       run: terraform apply -auto-approve aks-${{ matrix.k8s-version }}.json
-  #       env:
-  #         TF_VAR_k8s_version: ${{ matrix.k8s-version }}
-  #       working-directory: .github/terraform/aks
+      - name: Terraform apply
+        run: terraform apply -auto-approve aks-${{ matrix.k8s-version }}.json
+        env:
+          TF_VAR_k8s_version: ${{ matrix.k8s-version }}
+        working-directory: .github/terraform/aks
 
-  #     - uses: actions/setup-go@v2
-  #       with:
-  #         go-version: "${{ env.golang-version }}"
+      - uses: actions/setup-go@v2
+        with:
+          go-version: "${{ env.golang-version }}"
 
-  #     - uses: actions/cache@v3
-  #       with:
-  #         path: |
-  #           ~/.cache/go-build
-  #           ~/go/pkg/mod
-  #         key: ${{ runner.os }}-go-test-${{ hashFiles('**/go.sum') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-go-test-
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-test-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-test-
 
-  #     - name: Store creds
-  #       run: |
-  #         echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
+      - name: Store creds
+        run: |
+          echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
 
-  #     - name: Wait a bit for the cluster to become more stable
-  #       run: kubectl -n kube-system wait --for=condition=Ready pods --all --timeout=60s
+      - name: Wait a bit for the cluster to become more stable
+        run: kubectl -n kube-system wait --for=condition=Ready pods --all --timeout=60s
 
-  #     - name: Run integration tests
-  #       run: VERSION=${{ env.MONDOO_OPERATOR_IMAGE_TAG }} K8S_DISTRO=aks make test/integration/ci
+      - name: Run integration tests
+        run: VERSION=${{ env.MONDOO_OPERATOR_IMAGE_TAG }} K8S_DISTRO=aks make test/integration/ci
 
-  #     - name: Clean up AKS terraform
-  #       run: terraform destroy -auto-approve
-  #       if: success() || failure()
-  #       working-directory: .github/terraform/aks
+      - name: Clean up AKS terraform
+        run: terraform destroy -auto-approve
+        if: success() || failure()
+        working-directory: .github/terraform/aks
       
-  #     - run: mv integration-tests.xml integration-tests-aks-${{ matrix.k8s-version }}.xml
-  #       if: success() || failure()
+      - run: mv integration-tests.xml integration-tests-aks-${{ matrix.k8s-version }}.xml
+        if: success() || failure()
 
-  #     - name: Upload cloud test results
-  #       uses: actions/upload-artifact@v3  # upload test results
-  #       if: success() || failure()        # run this step even if previous step failed
-  #       with:                             # upload a combined archive with unit and integration test results
-  #         name: cloud-test-results
-  #         path: |
-  #           integration-tests-aks-${{ matrix.k8s-version }}.xml
-  #           .github/terraform/aks/aks-${{ matrix.k8s-version }}.json
+      - name: Upload cloud test results
+        uses: actions/upload-artifact@v3  # upload test results
+        if: success() || failure()        # run this step even if previous step failed
+        with:                             # upload a combined archive with unit and integration test results
+          name: cloud-test-results
+          path: |
+            integration-tests-aks-${{ matrix.k8s-version }}.xml
+            .github/terraform/aks/aks-${{ matrix.k8s-version }}.json
 
-  #     - name: Upload test logs artifact
-  #       uses: actions/upload-artifact@v3
-  #       if: failure()
-  #       with:
-  #         name: test-logs-aks-${{ matrix.k8s-version }}
-  #         path: /home/runner/work/mondoo-operator/mondoo-operator/tests/integration/_output/
+      - name: Upload test logs artifact
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: test-logs-aks-${{ matrix.k8s-version }}
+          path: /home/runner/work/mondoo-operator/mondoo-operator/tests/integration/_output/
 
-  # eks-integration-test:
-  #   runs-on: ubuntu-latest
-  #   name: EKS integration tests
+  eks-integration-test:
+    runs-on: ubuntu-latest
+    name: EKS integration tests
     
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       k8s-version: ["1.22", "1.23"]
+    strategy:
+      fail-fast: false
+      matrix:
+        k8s-version: ["1.22", "1.23"]
 
-  #   env:
-  #     TF_VAR_test_name: ${{ github.event.inputs.mondooOperatorImageTag }}
-  #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #     AWS_REGION: us-east-2
+    env:
+      TF_VAR_test_name: ${{ github.event.inputs.mondooOperatorImageTag }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: us-east-2
 
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0 # fetch is needed for "git tag --list" in the Makefile
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # fetch is needed for "git tag --list" in the Makefile
 
-  #     - name: Import environment variables from file
-  #       run: cat ".github/env" >> $GITHUB_ENV
+      - name: Import environment variables from file
+        run: cat ".github/env" >> $GITHUB_ENV
 
-  #     - name: Setup Terraform
-  #       uses: hashicorp/setup-terraform@v1
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
 
-  #     - run: terraform init
-  #       working-directory: .github/terraform/aws
+      - run: terraform init
+        working-directory: .github/terraform/aws
 
-  #     - name: Plan EKS
-  #       run: terraform plan -out eks-${{ matrix.k8s-version }}.json
-  #       env:
-  #         TF_VAR_kubernetes_version: ${{ matrix.k8s-version }}
-  #       working-directory: .github/terraform/aws
+      - name: Plan EKS
+        run: terraform plan -out eks-${{ matrix.k8s-version }}.json
+        env:
+          TF_VAR_kubernetes_version: ${{ matrix.k8s-version }}
+        working-directory: .github/terraform/aws
       
-  #     - name: Apply EKS
-  #       run: terraform apply -auto-approve eks-${{ matrix.k8s-version }}.json
-  #       env:
-  #         TF_VAR_kubernetes_version: ${{ matrix.k8s-version }}
-  #       working-directory: .github/terraform/aws
+      - name: Apply EKS
+        run: terraform apply -auto-approve eks-${{ matrix.k8s-version }}.json
+        env:
+          TF_VAR_kubernetes_version: ${{ matrix.k8s-version }}
+        working-directory: .github/terraform/aws
 
-  #     - uses: actions/setup-go@v2
-  #       with:
-  #         go-version: "${{ env.golang-version }}"
+      - uses: actions/setup-go@v2
+        with:
+          go-version: "${{ env.golang-version }}"
 
-  #     - uses: actions/cache@v3
-  #       with:
-  #         path: |
-  #           ~/.cache/go-build
-  #           ~/go/pkg/mod
-  #         key: ${{ runner.os }}-go-test-${{ hashFiles('**/go.sum') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-go-test-
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-test-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-test-
 
-  #     - name: Store creds
-  #       run: |
-  #         echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
+      - name: Store creds
+        run: |
+          echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
 
-  #     - name: Wait a bit for the cluster to become more stable
-  #       run: kubectl -n kube-system wait --for=condition=Ready pods --all --timeout=60s
+      - name: Wait a bit for the cluster to become more stable
+        run: kubectl -n kube-system wait --for=condition=Ready pods --all --timeout=60s
 
-  #     - name: Run integration tests
-  #       run: VERSION=${{ env.MONDOO_OPERATOR_IMAGE_TAG }} K8S_DISTRO=eks make test/integration/ci
+      - name: Run integration tests
+        run: VERSION=${{ env.MONDOO_OPERATOR_IMAGE_TAG }} K8S_DISTRO=eks make test/integration/ci
 
-  #     - name: Clean up EKS terraform
-  #       run: terraform destroy -auto-approve
-  #       working-directory: .github/terraform/aws
-  #       if: success() || failure()
+      - name: Clean up EKS terraform
+        run: terraform destroy -auto-approve
+        working-directory: .github/terraform/aws
+        if: success() || failure()
 
-  #     - run: mv integration-tests.xml integration-tests-eks-${{ matrix.k8s-version }}.xml
-  #       if: success() || failure()
+      - run: mv integration-tests.xml integration-tests-eks-${{ matrix.k8s-version }}.xml
+        if: success() || failure()
 
-  #     - name: Upload test results
-  #       uses: actions/upload-artifact@v3  # upload test results
-  #       if: success() || failure()        # run this step even if previous step failed
-  #       with:                             # upload a combined archive with unit and integration test results
-  #         name: cloud-test-results
-  #         path: integration-tests-eks-${{ matrix.k8s-version }}.xml
+      - name: Upload test results
+        uses: actions/upload-artifact@v3  # upload test results
+        if: success() || failure()        # run this step even if previous step failed
+        with:                             # upload a combined archive with unit and integration test results
+          name: cloud-test-results
+          path: integration-tests-eks-${{ matrix.k8s-version }}.xml
 
-  #     - name: Upload test logs artifact
-  #       uses: actions/upload-artifact@v3
-  #       if: failure()
-  #       with:
-  #         name: test-logs-eks-${{ matrix.k8s-version }}
-  #         path: /home/runner/work/mondoo-operator/mondoo-operator/tests/integration/_output/
+      - name: Upload test logs artifact
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: test-logs-eks-${{ matrix.k8s-version }}
+          path: /home/runner/work/mondoo-operator/mondoo-operator/tests/integration/_output/
 
   gke-integration-test:
     runs-on: ubuntu-latest
@@ -218,7 +218,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        k8s-version: ["1.23"]
+        k8s-version: ["1.22", "1.23", "1.24"]
 
     env:
       GOOGLE_APPLICATION_CREDENTIALS: ${{ format('{0}/{1}', github.workspace, 'gcp_sa.json') }}
@@ -305,8 +305,7 @@ jobs:
   test-report:
     name: Report test results
     runs-on: ubuntu-latest
-    #needs: [eks-integration-test,aks-integration-test,gke-integration-test]
-    needs: [gke-integration-test]
+    needs: [eks-integration-test,aks-integration-test,gke-integration-test]
     if: always()
     steps:
     - uses: actions/checkout@v3
