--- a/.github/workflows/cloud-tests.yaml
+++ b/.github/workflows/cloud-tests.yaml
@@ -1,5 +1,8 @@
 name: Cloud tests
 on:
+  schedule:
+    # Every Sunday at 11PM
+    - cron: 0 23 * * 7
   workflow_dispatch:
     inputs:
       mondooClientImageTag:
