--- a/.github/workflows/cloud-tests.yaml
+++ b/.github/workflows/cloud-tests.yaml
@@ -2,7 +2,7 @@ name: Cloud tests
 on:
   schedule:
     # Every Sunday at 11PM
-    - cron: 0 23 * * 7
+    - cron: '0 23 * * 0'
   workflow_dispatch:
     inputs:
       mondooClientImageTag:
