--- a/charts/mondoo-operator/templates/deployment.yaml
+++ b/charts/mondoo-operator/templates/deployment.yaml
@@ -43,6 +43,8 @@ spec:
         env:
         - name: FEATURE_DISCOVER_WORKLOADS
           value: "1"
+        - name: FEATURE_ENABLE_GARBAGE_COLLECTION
+          value: "1"
         - name: KUBERNETES_CLUSTER_DOMAIN
           value: {{ .Values.kubernetesClusterDomain }}
         image: {{ .Values.controllerManager.manager.image.repository }}:{{ .Values.controllerManager.manager.image.tag
